BRU#0003 - Cursor piscando

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,11 @@
-<div class="Bruna Azevedo"></div>
+<!doctype html>
+<html lang="pt-BR">
+<head>
+
+</head>
+<body>
+  <app-root></app-root>
+</body>
+</html>
+
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
